Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -46,10 +46,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "number_of_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "# define function here\n",
     "def number_of_destinations():\n",
-    "    "
+    "    return len(t)"
    ]
   },
   {
