--- a/index.ipynb
+++ b/index.ipynb
@@ -88,13 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define function here\n",
     "def next_up():\n",
-    "    return "
+    "    return travel_destinations[0]"
    ]
   },
   {
