Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ok, now write a function called `favorite_destination` that returns the string `'madagascar'`."
+    "\"?Ok, now write a function called `favorite_destination` that returns the string `'madagascar'`."
    ]
   },
   {
@@ -139,7 +139,8 @@
    "outputs": [],
    "source": [
     "# define function here\n",
-    "def favorite_destination():"
+    "def favorite_destination():\n",
+    "    return ''"
    ]
   },
   {
