--- a/index.ipynb
+++ b/index.ipynb
@@ -129,18 +129,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"?Ok, now write a function called `favorite_destination` that returns the string `'madagascar'`."
+    "Ok, now write a function called `favorite_destination` that returns the string `'madagascar'`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define function here\n",
     "def favorite_destination():\n",
-    "    return ''"
+    "    return 'madagascar'"
    ]
   },
   {
