--- a/index.ipynb
+++ b/index.ipynb
@@ -183,7 +183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here\n"
+    "# define function here\n",
+    "favorite_destinations = []"
    ]
   },
   {
