Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -184,7 +184,8 @@
    "outputs": [],
    "source": [
     "# define function here\n",
-    "favorite_destinations = []"
+    "favorite_destinations = []\n",
+    "def add_favorite_destination"
    ]
   },
   {
