--- a/index.ipynb
+++ b/index.ipynb
@@ -185,7 +185,8 @@
    "source": [
     "# define function here\n",
     "favorite_destinations = []\n",
-    "def add_favorite_destination"
+    "def add_favorite_destination():\n",
+    "    "
    ]
   },
   {
