--- a/index.ipynb
+++ b/index.ipynb
@@ -186,6 +186,7 @@
     "# define function here\n",
     "favorite_destinations = []\n",
     "def add_favorite_destination():\n",
+    "    favorite_destinations.append()\n",
     "    return 'madagascar'"
    ]
   },
