--- a/index.ipynb
+++ b/index.ipynb
@@ -179,14 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define function here\n",
     "favorite_destinations = []\n",
     "def add_favorite_destination():\n",
-    "    favorite_destinations.append()\n",
+    "    favorite_destinations.append('madagascar')\n",
     "    return 'madagascar'"
    ]
   },
