--- a/index.ipynb
+++ b/index.ipynb
@@ -199,23 +199,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'croatia'"
+       "'madagascar'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "favorite_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "# add_favorite_destination()\n",
+    "add_favorite_destination()\n",
     "favorite_destinations[-1] # 'madagascar'"
    ]
   },
