--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,8 @@
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "# define function here\n",
-    "def "
+    "def capitalize_countries():\n",
+    "    "
    ]
   },
   {
