Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,8 @@
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "# define function here\n",
     "def capitalize_countries():\n",
-    "    for i, v in enumerate()"
+    "    for i, v in enumerate(capitalized_destinations):\n",
+    "        "
    ]
   },
   {
