Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,7 @@
     "# define function here\n",
     "def capitalize_countries():\n",
     "    for i, v in enumerate(capitalized_destinations):\n",
-    "        "
+    "        capitalized_destinations[i] = "
    ]
   },
   {
