--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
     "# define function here\n",
     "def capitalize_countries():\n",
     "    for i, v in enumerate(capitalized_destinations):\n",
-    "        capitalized_destinations[i] = "
+    "        capitalized_destinations[i] = v.title()"
    ]
   },
   {
