Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,8 @@
     "# define function here\n",
     "def capitalize_countries():\n",
     "    for i, v in enumerate(capitalized_destinations):\n",
-    "        capitalized_destinations[i] = v.title()"
+    "        capitalized_destinations[i] = v.title()\n",
+    "    return "
    ]
   },
   {
@@ -263,7 +264,7 @@
     }
    ],
    "source": [
-    "# capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
+    "capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
    ]
   },
   {
