Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
     "def capitalize_countries():\n",
     "    for i, v in enumerate(capitalized_destinations):\n",
     "        capitalized_destinations[i] = v.title()\n",
-    "    return "
+    "    return capitalized_destinations"
    ]
   },
   {
